# kenya-county-analytics

./: .aider.chat.history.md  .aider.input.history  .env.example  .gitignore  .pylintrc  Dockerfile  LICENSE  README.md  docker-compose.yml  index.html  metadata.json  package-lock.json  package.json  pyproject.toml  requirements.txt  server.ts  test_ml_speed.py
.aider.tags.cache.v4/: cache.db  cache.db-shm  cache.db-wal
.github/workflows/: ci-cd.yml  ci.yml
data/: download_log.json
data/processed/: county_metrics.csv  county_metrics.json  download_log.json  extraction_log.json  master_dataset.json
data/raw/: download_log.json
docs/: ARCHITECTURE.md  DATA_DICTIONARY.md  architecture.md  makueni_pdf_analysis.json  makueni_pdf_analysis.md  runbook.md
files/: PROJECT_SUMMARY.txt  QUICK_START.md  README.md
logs/: api.err  dashboard.err  uvicorn.err  uvicorn.out
n8n_workflows/: data_pipeline.json  pdf_breakdown_path.json
scripts/: bootstrap_data.py  launch_docker.bat  launch_docker.sh  launch_native.bat  refresh_download_log.py  smoke_test.py  update_availability.py
src/: App.tsx  __init__.py  common.py  types.ts
src/agents/: data_agent.py  guide_agent.py  ml_agent.py
src/api/: main.py  main_v1.py
src/chatbots/: __init__.py  run_demo.py
src/components/: AnalyticsDashboard.tsx  AssistantsChat.tsx  ComparisonMatrix.tsx  CountyDetail.tsx  DataExport.tsx  ManualTabs.tsx  Map.tsx  Sidebar.tsx
src/dashboard/: streamlit_app.py
src/extractor/: __init__.py  pdf_parser.py  pdf_parser_v1.py
src/scraper/: __init__.py  (+2 more)
tests/: test_api.py  test_ml_models.py
(+1450 files in other folders)
