[tool.poetry]
name = "kenya-county-analytics"
version = "1.0.0"
description = "Real-time analytics platform for Kenya's 47 counties"
authors = ["ndumbe0 <your.email@example.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/ndumbe0/kenya-county-analytics"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = "^0.24.0"
pandas = "^2.1.3"
numpy = "^1.26.2"
scikit-learn = "^1.3.2"
prophet = "^1.1.5"
playwright = "^1.40.0"
requests = "^2.31.0"
pydantic = "^2.5.0"
python-dotenv = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^9.0.3"
black = "^23.11.0"
flake8 = "^6.1.0"
mypy = "^1.7.1"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
